--- a/chatlok.css
+++ b/chatlok.css
@@ -225,3 +225,44 @@ float: right;
 .hw {
   font-size: 17px;
 }
+
+
+
+/* idex - code*/
+
+body{
+  overflow: hidden;
+}
+#logIn-page-container, #username-container{
+padding-top: 90px;
+padding-left: 265px;
+padding-right: 245px;
+padding-bottom: 130px;
+font-size: 18px;
+margin: 5px;
+}
+#user,#emaill, #pass,#logIn{
+margin: 4px;
+font-size: 18px;
+box-shadow: 2px;
+border-radius: 2px;
+}
+#username-container input {
+width: 100%;
+padding: 12px 20px;
+margin: 8px 0;
+display: inline-block;
+border: 1px solid #ccc;
+border-radius: 4px;
+box-sizing: border-box;
+}
+#username-container button{
+width: 100%;
+background-color: #4CAF50;
+color: white;
+padding: 14px 20px;
+margin: 8px 0;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+}
