--- a/chatlok.css
+++ b/chatlok.css
@@ -99,7 +99,12 @@ body {
   float: right;
 }
 
-
+@media screen and (max-width: 500px) {
+  .header a {
+    float: center;
+    display: block;
+    text-align: left;
+  }
   
   .header-right {
     float: none;
@@ -146,7 +151,10 @@ body {
     color: white;
     background-color: #15f20a;
 }
-
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
 /* css code for profile card */
 
 #membership-container {
