--- a/chatlok.css
+++ b/chatlok.css
@@ -160,7 +160,7 @@ body {
 #membership-container {
   background-image: linear-gradient(to right, purple , blue);
   color: white;
-  height: 80%;
+  height: 70%%;
   width: 75%;
   font-size: 18px;
   padding: 7px;
