--- a/style.css
+++ b/style.css
@@ -59,3 +59,11 @@ button {
       float: none;
     }
   }  
+
+
+notes-container {
+    font-family: sans-serif;
+    padding: 4px;
+    margin: 4px;
+    font-size: 16px;
+}
