--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button {
 
 
 notes-container {
-    font-family: sans-serif;
+    font-family: Helvetica;
     padding: 14px;
     margin: 7px;
     font-size: 16px;
